updated docs figs

--- a/images/harmonic-expansion/harmonic-expansion.tex
+++ b/images/harmonic-expansion/harmonic-expansion.tex
@@ -12,14 +12,15 @@
 
 \begin{document}
 
-\gdef\dx{4.5}
-\gdef\dy{4.7}
+\gdef\dx{4.1}
+\gdef\dy{4.4}
 \gdef\fs{27}
 
 \begin{tikzpicture}[scale=1]
 
 %\node[] at ({0*\dx},+\dy) {\includegraphics[scale=0.6]{../tranisotropic/polycrystal-ice.png}};
 
+%\node[] at ({-1*\dx},-0.145*\dy) {\includegraphics[scale=1]{nlm.png}};
 \node[] at ({-1*\dx},0*\dy) {\includegraphics[scale=1]{nlm.png}};
 \node[] at ({-0.5*\dx},-0.5) {\fontsize{\fs}{\fs}\selectfont $\bf =$};
 
@@ -46,7 +47,7 @@
 	\node[] at ({(\i+0.5+\jj)*\dx},-0.5-\dy) {\fontsize{\fs}{\fs}\selectfont $\bf +$};
 }
 
-\node[] at ({(4+0.2)*\dx+\jj},-0.6-1*\dy) {\fontsize{\fs}{\fs}\selectfont $\bf\cdots$};
+\node[] at ({(4+0.2)*\dx+\jj},-0.6-1*\dy) {\fontsize{25}{25}\selectfont $\bf\cdots$};
 
 \end{tikzpicture}
 
